Make scrollbar accessible + Create vars for border-radius + Fix yellow and red

--- a/src/assets/css/multilayout-webapp/module/scrollbar.css
+++ b/src/assets/css/multilayout-webapp/module/scrollbar.css
@@ -1,6 +1,6 @@
 ::-webkit-scrollbar {
-    width: 6px;
-    height: 6px;
+    width: 1rem;
+    height: 1rem;
 }
 
 ::-webkit-scrollbar-track {
